@@ -66,6 +66,11 @@ extern void VG_(err_missing_prog) ( void );
 __attribute__((noreturn))
 extern void VG_(err_config_error) ( const HChar* format, ... );
 
+/* Called by main_process_cmd_line_options to indicate an unrecognised
+   command line option. */
+__attribute__((noreturn))
+extern void VG_(fmsg_unknown_option) ( const HChar *opt );
+
 #endif   // __PUB_CORE_LIBCPRINT_H
 
 /*--------------------------------------------------------------------*/
